--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(248, 248, 236)
+    background-color: rgb(248, 248, 236);
+    font-size: 62.5%;
 }
 
 header {
@@ -328,7 +329,7 @@ footer a {
     gap: 20px;
     justify-content: center;
     font-family: 'Satisfy', cursive;
-    font-size: 2.7vw;
+    font-size: 5em;
     color: rgb(78, 78, 71);
     text-decoration: none;
 }
