--- a/css/styles.css
+++ b/css/styles.css
@@ -362,9 +362,23 @@ footer a img {
         --bs-gutter-x: 0;
         padding-left: calc(var(--bs-gutter-x) *0);
     }
-
+    .navbar-brand {
+        font-size: 12vw;
+    }
+    .nav-list {
+        font-size: 4vw;
+    }
     .container-fluid {
         padding-left: 0;
+    }
+    h1 {
+        font-size: 8vw;
+    }
+    .imagen-con-texto p {
+        font-size: 3.5vw;
+    }
+    .boton-productos {
+        font-size: 4vw;
     }
     .catalogo-general {
         display: grid;
@@ -373,6 +387,9 @@ footer a img {
         grid-template-rows: repeat(4, auto);
         gap: 3em;
         width: 60%;
+    }
+    .catalogo h2 {
+        font-size: 5vw;
     }
     .fotos {
         display: grid;
@@ -402,6 +419,9 @@ footer a img {
         width: 80%;
         align-items: center;
     }
+    .nosotros-p {
+        font-size: 5vw;
+    }
     .contacto {
         display: grid;
         grid-template-columns: 1fr;
@@ -410,5 +430,8 @@ footer a img {
     }
     input, textarea, label {
         font-size: 2.5vw;
+    }
+    footer a {
+        font-size: 6vw;
     }
 }
