--- a/css/styles.css
+++ b/css/styles.css
@@ -318,6 +318,9 @@ h1 {
     resize: none;
     padding-left: 2px;
 }
+input, textarea, label {
+    font-size: 1.2vw;
+}
 
 footer {
     background-color: rgb(248, 248, 236);
