--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ h1 {
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, auto);
-    gap: 3em;
+    gap: 10em;
     width: 70%;
 }
 
@@ -122,6 +122,13 @@ h1 {
     border-radius: 5%;
     display: grid;
     box-shadow: 5px 5px 0px 0px gray;
+}
+
+.carousel-inner,
+.carousel-item-next,
+.carousel-item-start,
+.carrousel-item {
+    height: 320px;
 }
 
 .catalogo img {
@@ -167,7 +174,8 @@ h1 {
     gap: 1em
 }
 
-.fotos img, .nosotros-imagenes img {
+.fotos img,
+.nosotros-imagenes img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -274,9 +282,10 @@ h1 {
     width: 80%;
 }
 
-.contacto div{
+.contacto div {
     align-self: baseline;
 }
+
 .video-contacto {
     width: 100%;
     height: 100%;
@@ -318,7 +327,10 @@ h1 {
     resize: none;
     padding-left: 2px;
 }
-input, textarea, label {
+
+input,
+textarea,
+label {
     font-size: 1.2vw;
 }
 
@@ -366,24 +378,31 @@ footer a img {
         --bs-gutter-x: 0;
         padding-left: calc(var(--bs-gutter-x) *0);
     }
+
     .navbar-brand {
         font-size: 12vw;
     }
+
     .nav-list {
         font-size: 4vw;
     }
+
     .container-fluid {
         padding-left: 0;
     }
+
     h1 {
         font-size: 8vw;
     }
+
     .imagen-con-texto p {
         font-size: 3.5vw;
     }
+
     .boton-productos {
         font-size: 4vw;
     }
+
     .catalogo-general {
         display: grid;
         justify-content: center;
@@ -392,28 +411,38 @@ footer a img {
         gap: 3em;
         width: 60%;
     }
+
     .catalogo h2 {
         font-size: 5vw;
     }
+
+    .carousel-inner,
+    .carousel-item-next,
+    .carousel-item-start,
+    .carrousel-item {
+        height: 270px;
+    }
+
     .fotos {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(10,auto);
+        grid-template-rows: repeat(10, auto);
         grid-template-areas:
-        "img1"
-        "img2"
-        "img3"
-        "img4"
-        "img5"
-        "img6"
-        "img7"
-        "img8"
-        "img9"
-        "img10";
+            "img1"
+            "img2"
+            "img3"
+            "img4"
+            "img5"
+            "img6"
+            "img7"
+            "img8"
+            "img9"
+            "img10";
         width: 90%;
         padding-top: 20px;
         gap: 1em
     }
+
     .nosotros {
         display: grid;
         justify-content: center;
@@ -423,19 +452,35 @@ footer a img {
         width: 80%;
         align-items: center;
     }
+
     .nosotros-p {
         font-size: 5vw;
     }
+
     .contacto {
         display: grid;
         grid-template-columns: 1fr;
         gap: 3em;
         width: 80%;
     }
-    input, textarea, label {
+
+    input,
+    textarea,
+    label {
         font-size: 2.5vw;
     }
+
     footer a {
         font-size: 6vw;
+    }
+}
+
+@media screen and (max-width:600px) {
+
+    .carousel-inner,
+    .carousel-item-next,
+    .carousel-item-start,
+    .carrousel-item {
+        height: 180px;
     }
 }
