--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,55 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: rgb(248, 248, 236);
     font-size: 62.5%;
-}
+} */
 
-header {
+/* header {
     background-color: rgb(226, 217, 208);
-}
-
-.navbar-toggler {
-    border: none;
-}
-
-.navbar-toggler:focus {
-    box-shadow: none;
-}
-
-.navbar-brand {
+} */
+/* .bg-body-tertiary {
+    --bs-bg-opacity: 0 --bs-tertiary-bg-rgb: rgb(226, 217, 208) background-color: rgba(226, 217, 208, 0 --bs-tertiary-bg-rgb: rgb(226, 217, 208)) !important
+} */
+/* .container-fluid {
+    background-color: rgb(226, 217, 208);
+} */
+/* .navbar-brand {
     font-family: 'Indie Flower', cursive;
     color: rgb(78, 78, 71);
     font-size: 7.2vw;
     background-color: transparent;
     padding-left: 20px;
-}
+} */
 
-.navbar-toggler-icon {
+/* .navbar-toggler {
+    border: none;
+} */
+
+/* .navbar-toggler:focus {
+    box-shadow: none;
+} */
+
+/* .navbar-toggler-icon {
     background-image: url(./../img/menu-burger.svg);
     background-color: transparent;
     font-size: 30px;
-}
+} */
 
-.navbar-nav {
+/* .navbar-nav {
     gap: 20px;
     align-items: flex-end;
-}
+} */
 
-.nav-list {
+/* .nav-list {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     color: dimgray;
     font-weight: bold;
     font-size: 1.7vw;
     background-color: transparent;
-}
-
-.bg-body-tertiary {
-    --bs-bg-opacity: 0 --bs-tertiary-bg-rgb: rgb(226, 217, 208) background-color: rgba(226, 217, 208, 0 --bs-tertiary-bg-rgb: rgb(226, 217, 208)) !important
-}
-
-.container-fluid {
-    background-color: rgb(226, 217, 208);
-}
+} */
 
 main {
     background-color: rgb(248, 248, 236);
@@ -335,9 +332,9 @@ label {
     font-size: 1.2vw;
 }
 
-footer {
+/* footer {
     background-color: rgb(248, 248, 236);
-    padding: 50px 0px 50px 0px
+    padding: 50px 0px 50px 0px;
 }
 
 footer a {
@@ -352,9 +349,9 @@ footer a {
 
 footer a img {
     height: 20px;
-}
+} */
 
-@media screen and (min-width: 992px) {
+/* @media screen and (min-width: 992px) {
     .navbar-expand-lg .navbar-collapse {
         display: flex;
         flex-basis: auto;
@@ -365,7 +362,7 @@ footer a img {
     .navbar-nav {
         background-color: transparent;
     }
-}
+} */
 
 @media screen and (max-width: 991px) {
     .navbar-nav {
