--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 @import "utilities/variables";
+@import "utilities/mixin";
+@import "utilities/extend";
 @import "utilities/resets";
 @import "utilities/globals";
 
