--- a/scss/pages/_main-fotos.scss
+++ b/scss/pages/_main-fotos.scss
@@ -1,16 +1,17 @@
 main{
     .fotos {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, auto);
+        @include grid(center,4,1fr,4,1em,90%);
+        // display: grid;
+        // grid-template-columns: repeat(4, 1fr);
+        // grid-template-rows: repeat(4, auto);
         grid-template-areas:
             "img1 img1 img9 img3"
             "img4 img2 img9 img3"
             "img4 img6 img7 img7"
             "img8 img8 img5 img10";
-        width: 90%;
+        // width: 90%;
         padding-top: 20px;
-        gap: 1em;
+        // gap: 1em;
         img {
             width: 100%;
             height: 100%;
@@ -48,9 +49,10 @@ main{
         }
     }
     .video{
-        display: grid;
-        grid-template-columns: 1fr;
-        width: 90%;
+        // display: grid;
+        // grid-template-columns: 1fr;
+        // width: 90%;
+        @include grid(center,1,1fr,1,0,90%);
         padding-top: 1rem;
         video {
             width: 100%;
