--- a/scss/utilities/_globals.scss
+++ b/scss/utilities/_globals.scss
@@ -1,5 +1,5 @@
 main {
-    background-color: rgb(248, 248, 236);
+    background-color: $background-main;
     display: flex;
     align-items: center;
     flex-flow: column wrap;
@@ -9,6 +9,9 @@ main {
         font-size: 5vw;
         color: rgb(85, 67, 67);
         padding: 6vw 0;
+        background-color: transparent;
         text-align: center;
+        animation: animate__pulse;
+        animation-duration: 5s;
     }
 }
