--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -35,7 +35,7 @@
                         width: 100%;
                         padding: 0 25px 0px 0px;
                         margin: 0;
-                        background-color: rgb(226, 217, 208);
+                        background-color: $background-header;
                         z-index: 1;
                         --bs-gutter-x: 0;
                         padding-left: calc(var(--bs-gutter-x) *0);
@@ -60,12 +60,13 @@
             font-size: 4vw;
         }
         .catalogo-general {
-            display: grid;
-            justify-content: center;
-            grid-template-columns: 1fr;
-            grid-template-rows: repeat(4, auto);
-            gap: 3em;
-            width: 60%;
+            // display: grid;
+            // justify-content: center;
+            // grid-template-columns: 1fr;
+            // grid-template-rows: repeat(4, auto);
+            // gap: 3em;
+            // width: 60%;
+            @include grid(center,1,1fr,4,3em,60%);
             .catalogo{
                 h2{
                     font-size: 5vw;
@@ -81,9 +82,10 @@
             }
         }
         .fotos{
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: repeat(10, auto);
+            // display: grid;
+            // grid-template-columns: 1fr;
+            // grid-template-rows: repeat(10, auto);
+            @include grid(center,1,1fr,10,1em, 90%);
             grid-template-areas:
                 "img1"
                 "img2"
@@ -95,27 +97,29 @@
                 "img8"
                 "img9"
                 "img10";
-            width: 90%;
+            // width: 90%;
             padding-top: 20px;
-            gap: 1em;
+            // gap: 1em;
         }
         .nosotros{
-            display: grid;
-            justify-content: center;
-            grid-template-columns: 1fr;
-            grid-template-rows: repeat(2, auto);
-            gap: 1em;
-            width: 80%;
+            // display: grid;
+            @include grid(center, 1,1fr,2,1em,80%);
+            // justify-content: center;
+            // grid-template-columns: 1fr;
+            // grid-template-rows: repeat(2, auto);
+            // gap: 1em;
+            // width: 80%;
             align-items: center;
             .nosotros-p {
                 font-size: 5vw;
             }
         }
         .contacto{
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 3em;
-            width: 80%;
+            // display: grid;
+            @include grid(center,1,1fr,1,3em,80%);
+            // grid-template-columns: 1fr;
+            // gap: 3em;
+            // width: 80%;
             .form{
                 div{
                     input{
@@ -157,6 +161,21 @@
                             height: 180px;
                         }
                     }
+                }
+            }
+        }
+        .nosotros{
+            display: flex;
+            position: relative;
+            .nosotros-p{
+                display: flex;
+                position: absolute;
+                background-color: transparent;
+                color:floralwhite
+            }
+            .nosotros-imagenes{
+                img{
+                    mask-image: linear-gradient(to right, rgba(155, 151, 151, .8), rgba(155, 151, 151, 0.6));
                 }
             }
         }
