--- a/scss/utilities/_resets.scss
+++ b/scss/utilities/_resets.scss
@@ -2,6 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(248, 248, 236);
+    background-color: $background-main;
     font-size: 62.5%;
 }
